# QFiles

./: Archiver.cpp  Archiver.h  CMakeLists.txt  FileOperations.cpp  FileOperations.h  NotificationManager.cpp  NotificationManager.h  README.md  adminlauncher.cpp  adminlauncher.h  app_icon.rc  colors.h  contextmenu.cpp  contextmenu.h  customfilesystemmodel.cpp  customfilesystemmodel.h  disksizeutils.cpp  disksizeutils.h  favoritesmenu.cpp  favoritesmenu.h  filesystemtab.cpp  filesystemtab.h  folderviewsettings.cpp  folderviewsettings.h  homepagewidget.cpp  homepagewidget.h  iconsizes.h  listmodedelegate.cpp  listmodedelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  networkdrivewidget.cpp  networkdrivewidget.h  notificationwidget.cpp  notificationwidget.h  pasteworker.cpp  pasteworker.h  pp_icon.rc  propertiesdialog.cpp  (+24 more)
